external-crates/move/move-compiler/tests/move_2024/parser/ability_modifier_postfix_missing_commas.move
address 0x42 {
module M {
    // Ability declarations require commas between them.
    struct Foo {} has store copy;
}
}
